// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile Component Rendering should render all profile sections with correct props 1`] = `
<div
  class="MuiBox-root css-1ijsi7y"
  data-testid="profile-content-a7f8e4b2-9c3d-4a1e-8f6b-2d3e4a5b6c7d"
>
  <div
    class="MuiStack-root css-1sazv7p-MuiStack-root"
  >
    <div
      data-testid="profile-card"
    >
      ProfileCard: 
      John Doe
      , 
      Lusaka
      , 
      University of Zambia
      , 
      Computer Science
      , 
      2024
      ,
       
      loaded
    </div>
    <div
      class="MuiBox-root css-538mhv"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-b3t7h9-MuiPaper-root-MuiCard-root"
        data-testid="module-progress-card-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
        style="--Paper-shadow: var(--mui-shadows-1);"
      >
        <div
          class="MuiCardContent-root css-vcgegl-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-69i1ev"
          >
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 css-9rn6vr-MuiTypography-root"
                data-testid="module-progress-title-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
              >
                Skills & Interests Progress
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kkb5uy-MuiTypography-root"
              >
                How far you have progressed in your skills discovery conversation
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1adlzdl-MuiTypography-root"
            >
              0
              %
            </p>
          </div>
          <span
            aria-label="Build your profile"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1bdkjyh-MuiLinearProgress-root"
            data-testid="module-progress-0-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
            role="progressbar"
          >
            <span
              class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-184k4oh-MuiLinearProgress-bar1"
              style="transform: translateX(-100%);"
            />
          </span>
          <div
            class="MuiBox-root css-1kskb09"
          >
            <div
              class="MuiBox-root css-d08t8g"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1ppf0l6-MuiSvgIcon-root"
                data-testid="CheckCircleOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"
                />
              </svg>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kkb5uy-MuiTypography-root"
              >
                <span
                  class="MuiTypography-root MuiTypography-body2 css-1psesu5-MuiTypography-root"
                >
                  0
                  %
                </span>
                 
                completed
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        data-testid="career-readiness-progress-banner"
      >
        CareerReadinessProgressBanner: 
        2
         modules
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-b3t7h9-MuiPaper-root-MuiCard-root"
      data-testid="career-explorer-card-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
      style="--Paper-shadow: var(--mui-shadows-1);"
    >
      <div
        class="MuiCardContent-root css-y966ta-MuiCardContent-root"
      >
        <div
          class="MuiBox-root css-yc4e3d"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-9rn6vr-MuiTypography-root"
            data-testid="career-explorer-title-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
          >
            Career Paths
          </h6>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body2 css-gjgqys-MuiTypography-root"
          data-testid="career-explorer-empty-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
        >
          No sectors explored yet. Start the Career Explorer to explore sectors!
        </p>
      </div>
    </div>
    <div
      data-testid="skills-discovered-card"
    >
      SkillsDiscoveredCard: 
      0
       skills, 
      loaded
    </div>
    <div
      class="MuiBox-root css-c7fp9u"
    >
      <div
        data-testid="security-card"
      >
        SecurityCard: 
        john.doe@example.com
        , 
        loaded
      </div>
      <div
        data-testid="preferences-card"
      >
        PreferencesCard: 
        en
        , 
        loaded
      </div>
    </div>
  </div>
</div>
`;

exports[`Profile Component Rendering should render correctly with partial data 1`] = `
<div
  class="MuiBox-root css-1ijsi7y"
  data-testid="profile-content-a7f8e4b2-9c3d-4a1e-8f6b-2d3e4a5b6c7d"
>
  <div
    class="MuiStack-root css-1sazv7p-MuiStack-root"
  >
    <div
      data-testid="profile-card"
    >
      ProfileCard: 
      John Doe
      , 
      null
      , 
      null
      , 
      null
      , 
      null
      ,
       
      loaded
    </div>
    <div
      class="MuiBox-root css-538mhv"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-b3t7h9-MuiPaper-root-MuiCard-root"
        data-testid="module-progress-card-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
        style="--Paper-shadow: var(--mui-shadows-1);"
      >
        <div
          class="MuiCardContent-root css-vcgegl-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-69i1ev"
          >
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 css-9rn6vr-MuiTypography-root"
                data-testid="module-progress-title-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
              >
                Skills & Interests Progress
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kkb5uy-MuiTypography-root"
              >
                How far you have progressed in your skills discovery conversation
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1adlzdl-MuiTypography-root"
            >
              0
              %
            </p>
          </div>
          <span
            aria-label="Build your profile"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1bdkjyh-MuiLinearProgress-root"
            data-testid="module-progress-0-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
            role="progressbar"
          >
            <span
              class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-184k4oh-MuiLinearProgress-bar1"
              style="transform: translateX(-100%);"
            />
          </span>
          <div
            class="MuiBox-root css-1kskb09"
          >
            <div
              class="MuiBox-root css-d08t8g"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1ppf0l6-MuiSvgIcon-root"
                data-testid="CheckCircleOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"
                />
              </svg>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kkb5uy-MuiTypography-root"
              >
                <span
                  class="MuiTypography-root MuiTypography-body2 css-1psesu5-MuiTypography-root"
                >
                  0
                  %
                </span>
                 
                completed
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        data-testid="career-readiness-progress-banner"
      >
        CareerReadinessProgressBanner: 
        0
         modules
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-b3t7h9-MuiPaper-root-MuiCard-root"
      data-testid="career-explorer-card-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
      style="--Paper-shadow: var(--mui-shadows-1);"
    >
      <div
        class="MuiCardContent-root css-y966ta-MuiCardContent-root"
      >
        <div
          class="MuiBox-root css-yc4e3d"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-9rn6vr-MuiTypography-root"
            data-testid="career-explorer-title-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
          >
            Career Paths
          </h6>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body2 css-gjgqys-MuiTypography-root"
          data-testid="career-explorer-empty-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
        >
          No sectors explored yet. Start the Career Explorer to explore sectors!
        </p>
      </div>
    </div>
    <div
      data-testid="skills-discovered-card"
    >
      SkillsDiscoveredCard: 
      0
       skills, 
      loaded
    </div>
    <div
      class="MuiBox-root css-c7fp9u"
    >
      <div
        data-testid="security-card"
      >
        SecurityCard: 
        john@example.com
        , 
        loaded
      </div>
      <div
        data-testid="preferences-card"
      >
        PreferencesCard: 
        null
        , 
        loaded
      </div>
    </div>
  </div>
</div>
`;

exports[`Profile Component Rendering should render with null data showing 'Not available' 1`] = `
<div
  class="MuiBox-root css-1ijsi7y"
  data-testid="profile-content-a7f8e4b2-9c3d-4a1e-8f6b-2d3e4a5b6c7d"
>
  <div
    class="MuiStack-root css-1sazv7p-MuiStack-root"
  >
    <div
      data-testid="profile-card"
    >
      ProfileCard: 
      null
      , 
      null
      , 
      null
      , 
      null
      , 
      null
      ,
       
      loaded
    </div>
    <div
      class="MuiBox-root css-538mhv"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-b3t7h9-MuiPaper-root-MuiCard-root"
        data-testid="module-progress-card-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
        style="--Paper-shadow: var(--mui-shadows-1);"
      >
        <div
          class="MuiCardContent-root css-vcgegl-MuiCardContent-root"
        >
          <div
            class="MuiBox-root css-69i1ev"
          >
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle1 css-9rn6vr-MuiTypography-root"
                data-testid="module-progress-title-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
              >
                Skills & Interests Progress
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kkb5uy-MuiTypography-root"
              >
                How far you have progressed in your skills discovery conversation
              </p>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1adlzdl-MuiTypography-root"
            >
              0
              %
            </p>
          </div>
          <span
            aria-label="Build your profile"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1bdkjyh-MuiLinearProgress-root"
            data-testid="module-progress-0-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
            role="progressbar"
          >
            <span
              class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-184k4oh-MuiLinearProgress-bar1"
              style="transform: translateX(-100%);"
            />
          </span>
          <div
            class="MuiBox-root css-1kskb09"
          >
            <div
              class="MuiBox-root css-d08t8g"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1ppf0l6-MuiSvgIcon-root"
                data-testid="CheckCircleOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"
                />
              </svg>
              <p
                class="MuiTypography-root MuiTypography-body2 css-kkb5uy-MuiTypography-root"
              >
                <span
                  class="MuiTypography-root MuiTypography-body2 css-1psesu5-MuiTypography-root"
                >
                  0
                  %
                </span>
                 
                completed
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        data-testid="career-readiness-progress-banner"
      >
        CareerReadinessProgressBanner: 
        0
         modules
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-b3t7h9-MuiPaper-root-MuiCard-root"
      data-testid="career-explorer-card-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
      style="--Paper-shadow: var(--mui-shadows-1);"
    >
      <div
        class="MuiCardContent-root css-y966ta-MuiCardContent-root"
      >
        <div
          class="MuiBox-root css-yc4e3d"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-9rn6vr-MuiTypography-root"
            data-testid="career-explorer-title-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
          >
            Career Paths
          </h6>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body2 css-gjgqys-MuiTypography-root"
          data-testid="career-explorer-empty-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
        >
          No sectors explored yet. Start the Career Explorer to explore sectors!
        </p>
      </div>
    </div>
    <div
      data-testid="skills-discovered-card"
    >
      SkillsDiscoveredCard: 
      0
       skills, 
      loaded
    </div>
    <div
      class="MuiBox-root css-c7fp9u"
    >
      <div
        data-testid="security-card"
      >
        SecurityCard: 
        null
        , 
        loaded
      </div>
      <div
        data-testid="preferences-card"
      >
        PreferencesCard: 
        null
        , 
        loaded
      </div>
    </div>
  </div>
</div>
`;
